tests/baselines/reference/parserErrorRecovery_Block2.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/Blocks/parserErrorRecovery_Block2.ts(2,5): error TS1128: Declaration or statement expected.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/Blocks/parserErrorRecovery_Block2.ts(2,6): error TS1127: Invalid character.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/Blocks/parserErrorRecovery_Block2.ts (2 errors) ====
    function f() {
        #
        ~
!!! error TS1128: Declaration or statement expected.
         
!!! error TS1127: Invalid character.
        return;
    }